2005-12-13  Zoltan Varga  <vargaz@gmail.com>

	* get.c (get_constant): Use finite() instead of isnormal () since the
	latter is not available on solaris.

2005-11-23  Ankit Jain  <jankit@novell.com>

	* get.c (get_methodspec): Use mono_get_method_full so as to handle
	methodspecs that refer to generic methods in other assemblies.

2005-11-23  Ankit Jain  <jankit@novell.com>

	* dump.c (has_cattr_get_table): Handle GenericParam.
	* get.c (dis_get_custom_attrs): Likewise.
	* main.c (dump_cattrs_for_type_params): New. Dump custom attributes
	for type parameters.
	(dis_method_list): Call dump_cattrs_for_type_params.
	(dis_type): Likewise.

2005-11-17  Ankit Jain  <jankit@novell.com>

	* get.c (dis_stringify_type): Escape generic type parameter names.

2005-11-17  Ankit Jain  <jankit@novell.com>

	* get.c (str_escape): New. Escape a given list of characters.
	  (get_escaped_name): Escape ' and \ using str_escape, and 
	allow ` .

2005-11-10  Ankit Jain  <jankit@novell.com>

	* dump.c (dump_table_method): Load generic param constraints.
	* get.c (dis_stringify_method_signature): Likewise.
	* main.c (dis_method_list): Likewise.
	  (dis_type): Likewise.

2005-11-10  Ankit Jain  <jankit@novell.com>

	* get.c (init_key_table): Add keyword - uint.

2005-11-08  Ankit Jain  <jankit@novell.com>

	* dump.c (dump_table_method): Get the type/method context required for parsing
	  method signature and dis_stringify'ing it.

2005-11-08  Ankit Jain  <jankit@novell.com>

	* get.c (init_key_table): Add keywords - callconv and flags.

2005-10-28  Ankit Jain  <jankit@novell.com>

	* dis_stringify_method_signature: Add detail for 'returns:' in the comment.

2005-10-28  Ankit Jain  <jankit@novell.com>

	* tests: Add new directory for test cases.

2005-10-28  Ankit Jain  <jankit@novell.com>

	* get.c (dis_stringify_method_signature): Use context instead of container
	  as container can be NULL.

2005-10-20  Ankit Jain  <jankit@novell.com>
